.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:12:54 **** Build of configuration Debug for project scoreFeatures ****
make all 
Building file: ../src/scoreFeatures.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/scoreFeatures.d" -MT"src/scoreFeatures.d" -o "src/scoreFeatures.o" "../src/scoreFeatures.cpp"
../src/scoreFeatures.cpp:7:9: warning: multi-character character constant [-Wmultichar]
        cout<< 'file input' << argv[0] << endl;
               ^
../src/scoreFeatures.cpp:7:9: warning: character constant too long for its type
2 warnings generated.
Finished building: ../src/scoreFeatures.cpp
 
Building target: scoreFeatures
Invoking: MacOS X C++ Linker
g++  -o "scoreFeatures"  ./src/scoreFeatures.o   
Finished building target: scoreFeatures
 
12:14:19 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
make: Nothing to be done for `all'.
12:14:24 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
make: Nothing to be done for `all'.
12:14:28 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
make: Nothing to be done for `all'.
12:15:39 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
Building file: ../src/scoreFeatures.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/scoreFeatures.d" -MT"src/scoreFeatures.d" -o "src/scoreFeatures.o" "../src/scoreFeatures.cpp"
../src/scoreFeatures.cpp:7:9: warning: multi-character character constant [-Wmultichar]
        cout<< 'file input' << argv[1] << endl;
               ^
../src/scoreFeatures.cpp:7:9: warning: character constant too long for its type
2 warnings generated.
Finished building: ../src/scoreFeatures.cpp
 
Building target: scoreFeatures
Invoking: MacOS X C++ Linker
g++  -o "scoreFeatures"  ./src/scoreFeatures.o   
Finished building target: scoreFeatures
 
12:15:54 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
Building file: ../src/scoreFeatures.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/scoreFeatures.d" -MT"src/scoreFeatures.d" -o "src/scoreFeatures.o" "../src/scoreFeatures.cpp"
Finished building: ../src/scoreFeatures.cpp
 
Building target: scoreFeatures
Invoking: MacOS X C++ Linker
g++  -o "scoreFeatures"  ./src/scoreFeatures.o   
Finished building target: scoreFeatures
 
12:15:57 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
make: Nothing to be done for `all'.
12:16:05 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
Building file: ../src/scoreFeatures.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/scoreFeatures.d" -MT"src/scoreFeatures.d" -o "src/scoreFeatures.o" "../src/scoreFeatures.cpp"
Finished building: ../src/scoreFeatures.cpp
 
Building target: scoreFeatures
Invoking: MacOS X C++ Linker
g++  -o "scoreFeatures"  ./src/scoreFeatures.o   
Finished building target: scoreFeatures
 
12:16:08 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
make: Nothing to be done for `all'.
12:20:02 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
Building file: ../src/scoreFeatures.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/scoreFeatures.d" -MT"src/scoreFeatures.d" -o "src/scoreFeatures.o" "../src/scoreFeatures.cpp"
../src/scoreFeatures.cpp:7:5: error: expected '(' after 'if'
        if argc != 3{
           ^
1 error generated.
make: *** [src/scoreFeatures.o] Error 1
12:20:27 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
Building file: ../src/scoreFeatures.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/scoreFeatures.d" -MT"src/scoreFeatures.d" -o "src/scoreFeatures.o" "../src/scoreFeatures.cpp"
Finished building: ../src/scoreFeatures.cpp
 
Building target: scoreFeatures
Invoking: MacOS X C++ Linker
g++  -o "scoreFeatures"  ./src/scoreFeatures.o   
Finished building target: scoreFeatures
 
12:20:32 **** Incremental Build of configuration Debug for project scoreFeatures ****
make all 
make: Nothing to be done for `all'.
